# figura_dh

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
benchmarks/: repeat_bench.rs  template_bench.rs
examples/: basic.rs  conditionals.rs  custom_delimiters.rs  custom_parser.rs  demo.rs  repeat.rs  report.rs  table.rs
src/: arg.rs  directive.rs  directives.rs  err.rs  lexer.rs  lib.rs  parser.rs  traits.rs
tests/: boundary.rs  integration_tests.rs  nested_delimiter.rs  stress.rs  tests.rs
