[package]
name = "figura"
version = "1.3.3"
edition = "2024"
authors = ["Saverio Scagnoli <svscagn@gmail.com>"]
description = "A flexible string template formatting crate"
documentation = "https://docs.rs/figura"
repository = "https://github.com/saverioscagnoli/figura"
homepage = "https://github.com/saverioscagnoli/figura"
license = "MIT"
readme = "README.md"
keywords = ["string", "format", "template"]

exclude = [".vscode", ".gitignore", "docs", "CHANGELOG.md"]

[dependencies]
itoa = "1.0.15"
ryu = "1.0.20"
thiserror = "2.0.12"

[lib]
doctest = false
