[package]
name = "figura"
version = "1.3.3"
edition = "2024"
authors = ["Saverio Scagnoli <svscagn@gmail.com>"]
description = "A flexible string template formatting crate"
documentation = "https://docs.rs/figura"
repository = "https://github.com/saverioscagnoli/figura"
homepage = "https://github.com/saverioscagnoli/figura"
license = "MIT"
readme = "README.md"
keywords = ["string", "format", "template"]

exclude = [".vscode", ".gitignore", "docs", "CHANGELOG.md"]


[lib]
doctest = false

[dependencies]
itoa = "1.0.17"
ryu = "1.0.22"


[dev-dependencies]
criterion = "0.8.1"

[[bench]]
name = "template_bench"
path = "benchmarks/template_bench.rs"
harness = false


[[bench]]
name = "repeat_bench"
path = "benchmarks/repeat_bench.rs"
harness = false
