[package]
name = "figura"
version = "2.0.3"
edition = "2024"
authors = ["Saverio Scagnoli <svscagn@gmail.com>"]
description = "A flexible string template formatting crate"
documentation = "https://docs.rs/figura"
repository = "https://github.com/saverioscagnoli/figura"
homepage = "https://github.com/saverioscagnoli/figura"
license = "MIT"
readme = "README.md"
keywords = ["string", "format", "template"]

exclude = [".gitignore", "docs", "CHANGELOG.md"]


[lib]
doctest = false

[dependencies]
itoa = "1.0.17"
thiserror = "2.0.17"
zmij = "1.0.14"


[dev-dependencies]
criterion = "0.8.1"

[[bench]]
name = "template_bench"
path = "benchmarks/template_bench.rs"
harness = false
